# daily-trading-system

./: .env  .gitignore  AI_USAGE_LOG.md  README.md  executive_summary.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  deploy.yml
.streamlit/: config.toml
data/processed/: features.parquet
docs/: AI_USAGE_LOG.md  ai_usage_log.md  executive_summary.md
models/: classifier.joblib  features_list.joblib  regressor.joblib  split_meta.joblib
notebooks/: etl.ipynb  etl_pipeline_v1.ipynb  model_exploration.ipynb
pages/: 00_Home.py  01_Market_Analysis.py  02_Trading_Strategy.py  03_Methodology.py
scripts/: debug_tickers.py  generate_web_data.py  test_api.py
src/: api_wrapper.py  debug_tickers.py  etl.py  fetch_data.py  predict.py  styles.py  test_api.py  train.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/data/: backtest.json  methodology.json  predictions.json
web/src/components/: Chart.astro  Nav.astro  StatTile.astro  ThemeToggle.astro
web/src/layouts/: Layout.astro
web/src/lib/: charts.ts  data.ts
web/src/pages/: index.astro  methodology.astro  predictions.astro  strategy.astro
web/src/styles/: global.css
